# cpplearn

./: CMakeLists.txt  README.adoc  notes.adoc
c01/: README.adoc  notes.adoc  notes_01.adoc  notes_02.adoc  notes_03.adoc
c01/m01/: hello.cpp
c01/m02/: varstypes.cpp
c01/m03/: varstypes.cpp
c01/m04/: Person.cpp  Person.h  classobj.cpp
c01/m05/: Person.h
c01/m06/: Person.cpp  Tweeter.cpp  classobj.cpp
c01/m07/: Tweeter.cpp  classobj.cpp  status.h
c01/m08/: func.cpp  utility.cpp
c01/m09/: func.cpp
c01/m10/: oper.cpp
c01/m11/: Person.h
c01/src/m05/: Person.cpp  classobj.cpp
c01/src/m06/: Tweeter.h
c01/src/m07/: Person.h
c01/src/m08/: utility.h
c01/src/m09/: Person.cpp  Person.h  Tweeter.h
c01/src/m10/: Person.cpp  Person.h
c01/src/m11/: Person.cpp
c01/src/m12/: Person.cpp  Person.h  tempfunc.cpp
c01/src/m13/: Accum.h  tempclass.cpp
c01/src/m14/: Accum.h  Person.h  tempspec.cpp
c01/src/m15/: Accum.h  Person.h
c01/src/m16/: Person.h  refptr.cpp
c01/src/m17/: Person.cpp  constref.cpp
c01/src/m18/: constptr.cpp
c01/src/m19/: freestore.cpp
c01/src/m20/: Person.cpp  Person.h  Resource.cpp  Resource.h  memmgmt.cpp
c01/src/m21/: Person.cpp  Person.h  smartptr.cpp
c01/src/m22/: Person.h  Tweeter.h  indirinher.cpp
c01/src/m23/: Person.h  Tweeter.h  virdes.cpp
c01/src/m24/: Tweeter.h  indirinhersptr.cpp
c01/src/m25/: Person.h  slicing.cpp
c01/src/m26/: Resource.cpp  Resource.h  cast.cpp
c02/: README.adoc  notes.adoc  notes_01.adoc  notes_02.adoc
c02/src/m01/: Resource.h  containers.cpp
c02/src/m02/: veclist.cpp
c02/src/m03/: lambdas.cpp
c02/src/m04/: mutable.cpp
c02/src/m05/: cap.cpp
c02/src/m06/: Resource.h  uptrmv.cpp
c02/src/m07/: algo.cpp
c02/src/m08/: avoiderr.cpp
c02/src/m09/: port.cpp
c02/src/m10/: morealgo.cpp
c02/src/m11/: Resource.h  mv.cpp
c02/src/m12/: excep.cpp
c02/src/m13/: Person.h  throw.cpp
c02/src/m14/: Noise.h  Person.h  unwind.cpp
c02/src/m15/: Resource.h  raii.cpp
c03/: README.adoc  notes_01.adoc  notes_02.adoc
c03/src/m01/: GlobalCoffeeCfg.h  singleton.cpp
c03/src/m02/: CoffeeBuilder.cpp  CoffeeBuilder.h  builder.cpp
c03/src/m03/: prototype.cpp
c04/: README.adoc  notes_01.adoc
c04/src/m01/: cnt.cpp
c04/src/m02/: cntif.cpp
c04/src/m03/: cntchk.cpp
c04/src/m04/: find.cpp
c04/src/m05/: findif.cpp
c04/src/m06/: sort.cpp
c04/src/m07/: stablesort.cpp
c04/src/m08/: Person.h  issorted.cpp
c04/src/m09/: minmax.cpp
c04/src/m10/: shuffle.cpp
c04/src/m11/: Person.h  partialsort.cpp
c04/src/m12/: cmp.cpp
c04/src/m13/: acc.cpp
c04/src/m14/: foreach.cpp
